@@ -1,3 +1,8 @@
+2025-02-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (tramp-connection-properties): Add link to the
+	Tramp manual in the docstring.
+
 2025-01-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-temporary-file-directory): Simplify.
